--- a/game/src/_static/index.html
+++ b/game/src/_static/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Forest Walker</title>
+    <title>Blockster</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
     <link rel="stylesheet" href="style/main.css"></link>
   </head>
