resolved and refacted player related bugs

--- a/game/src/_static/index.html
+++ b/game/src/_static/index.html
@@ -20,7 +20,7 @@
       <script src="assets/vendor/libs/Detector.js"></script>
       <script src="assets/vendor/libs/toon3d.js"></script>
 
-      <script src="/socket.io/socket.io.js"></script>
+      <!-- <script src="/socket.io/socket.io.js"></script> -->
       <script type="text/javascript" src="/main.min.js"></script>
 
     </body>
