--- a/game/src/_static/index.html
+++ b/game/src/_static/index.html
@@ -16,6 +16,7 @@
 
       <script src="assets/vendor/libs/inflate.min.js"></script>
       <script src="assets/vendor/loaders/FBXLoader.js"></script>
+      <script src="assets/vendor/loaders/GLTFLoader.js"></script>
       <script src="assets/vendor/controls/OrbitControls.js"></script>
       <script src="assets/vendor/libs/Detector.js"></script>
       <script src="assets/vendor/libs/toon3d.js"></script>
